@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2008-12-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.
+
+</UL>
+<p>
 2008-11-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
